<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MainActivity" android:id="@+id/main_layout" tools:layout_editor_absoluteY="81dp">

    <Button
            android:text="@string/show_order"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_order"
            android:background="@color/colorPrimary"
            android:onClick="buttonOrder" style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintTop_toBottomOf="@+id/button_menu" android:layout_marginBottom="90dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="52dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/button_menu"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            android:contentDescription="@string/restaurant_logo"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="5dp" app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"/>
    <Button
            android:text="@string/show_menu"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_menu"
            android:background="@color/colorPrimary"
            android:onClick="buttonMenu" style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/button_order"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>