<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ActivityOrder" tools:layout_editor_absoluteY="81dp">

    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/order_list" android:entries="@array/menuList"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="29dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_done" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_home"
            style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorPrimary"
            android:onClick="buttonHome"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/button_done"
            android:layout_marginBottom="65dp"/>
    <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_clear"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="29dp"
            android:layout_marginStart="45dp"
            app:layout_constraintTop_toBottomOf="@+id/order_list" android:onClick="buttonClear"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_done" tools:text="Hacer Pedido"
            android:text="@string/do_order" android:layout_marginEnd="26dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toTopOf="@+id/button_home" android:onClick="buttonDone"/>
</android.support.constraint.ConstraintLayout>